--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -348,7 +348,7 @@ Notes:
 
  To further understand the characteristics of this increase, we exploited the detailed time information in our dataset, which allowed us to conduct a three-hour analysis to explore the finer temporal patterns of domestic abuse cases (alcohol-related or not) perpetrated before and after an England match. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. While a similar pattern can be observed on days when England lost, the increase in the number of alcohol-related cases is substantially smaller and not statistically different from zero.
  
- We also examined how these patterns vary by the gender of the victim and the offender. Table \ref{gender} in the Appendix shows the results by alcohol-involvement and victim-offender gender group (male to female, female to male, male to male, female to female), on a sample of domestic abuse cases with one victim and offender, where gender information is available (about 86\% of domestic abuse cases). In line with our previous results, we find a 41\%, 95\% CI [18\%--69\%], increase in the group of alcohol-related male to female cases on England win days, and a 17\%, 95\% CI [5\%--31\%] increase on days following and England match. We find no evidence for comparable increases in other gender groups, however, it should be noted that substantial differences in the number of cases by gender group (e.g., 78\% of cases are male to female, 10\% of cases are female to male, 7\% are male to male, and 5\% are female to female) hinders a precise estimation of the of football on alcohol and non-alcohol related domestic abuse. 
+ We also examined how these patterns vary by the gender of the victim and the offender. Table \ref{gender} in the Appendix shows the results by alcohol-involvement and victim-offender gender group (male to female, female to male, male to male, female to female), on a sample of domestic abuse cases with one victim and offender, where gender information is available (about 86\% of domestic abuse cases). In line with our previous results, we find a 41\%, 95\% CI [18\%--69\%], increase in the group of alcohol-related male to female cases on England win days, and a 17\%, 95\% CI [5\%--31\%] increase on days following and England match. We find no evidence for comparable increases in other gender groups, however, it should be noted that substantial differences in the number of cases by gender group (e.g., 78\% of cases are male to female, 10\% of cases are female to male, 7\% are male to male, and 5\% are female to female) hinders a precise estimation of the effect of football on alcohol and non-alcohol related domestic abuse. 
 
 
 
@@ -461,7 +461,7 @@ Notes:
 \end{tabular} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001}
-      \item[b] \textit{Estimates are exponentiated coefficients from negative binomial regressions with non-match day as benchmark; controls include day of week, month, year, Christmas, and New Year's Eve}
+      \item[b] \textit{Estimates are exponentiated coefficients from negative binomial regressions with non-match day as benchmark; controls include day of week, month, year, Christmas, and New Year's Eve; 95\% confidence intervals are in square brackets}
     \end{tablenotes}
 \end{threeparttable} 
 \end{table*}
@@ -473,6 +473,9 @@ Notes:
 
 
 A previous study by \citeA{Kirby2014} found that an England loss results in the most pronounced increase in domestic abuse (38\%), and a win or draw have a slightly smaller effect (26\%). They used daily counts of IPV in Lancashire from the months of the 2002, 2006, 2010 World Cups. Upon re-analysing their data by treating wins and draws as two separate variables (see Table \ref{kirbyrep1}), we see a roughly similar effect for wins (45\%, 95\% CI [28\%--64\%]) and losses (39\%, 95\% CI [18\%--64\%]), and no effect when England draws. Separating wins and draws clearly improves the fit of the model, demonstrated by the reduction in the Bayesian and Akaike Information Criteria (BIC and AIC, respectively). However, the estimated effect of an England loss is insensitive to this change. In conclusion, our reanalysis replicates the win effect seen in the West Midlands data, though the absence of a loss effect remains a difference between the two studies.
+
+
+
 
 \begin{table*}[!htb]
 \centering
@@ -491,19 +494,17 @@ A previous study by \citeA{Kirby2014} found that an England loss results in the 
 \\[-1.8ex] & (1) & (2)\\ 
 \hline \\[-1.8ex] 
  England windraw & 1.256$^{***}$ &  \\ 
-  & (1.128, 1.398) &  \\ 
-  England lost & 1.382$^{***}$ & 1.388$^{***}$ \\ 
-  & (1.151, 1.662) & (1.175, 1.639) \\ 
-  After England & 1.111$^{*}$ & 1.113$^{*}$ \\ 
-  & (1.004, 1.228) & (1.014, 1.221) \\ 
+  & [1.128, 1.398] &  \\ 
   England win &  & 1.452$^{***}$ \\ 
-  &  & (1.282, 1.644) \\ 
+  &  & [1.282, 1.644] \\ 
   England draw &  & 1.032 \\ 
-  &  & (0.893, 1.191) \\ 
-%  England lost &  & 1.388$^{***}$ \\ 
-%  &  & (1.175, 1.639) \\ 
-%  After England &  & 1.113$^{**}$ \\ 
-%  &  & (1.014, 1.221) \\ 
+  &  & [0.893, 1.191] \\ 
+  England lost & 1.382$^{***}$ & 1.388$^{***}$ \\ 
+  & [1.151, 1.662] & [1.175, 1.639] \\ 
+  After England & 1.111$^{*}$ & 1.113$^{*}$ \\ 
+  & [1.004, 1.228] & [1.014, 1.221] \\ 
+%  Constant & 41.905 & 41.561 \\ 
+%  & (37.378, 46.946) & (37.349, 46.200) \\ 
  \hline \\[-1.8ex] 
 Observations & 92 & 92 \\ 
 BIC & 747.763 & 739.662 \\ 
@@ -513,13 +514,14 @@ AIC & 714.980 & 704.356 \\
 \end{tabular} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001}
-      \item[b] \textit{Estimates are exponentiated coefficients from negative binomial regressions (based on tests of overdispersion) with year and day of week controls and no England match days during the tournament as benchmark; data is only available during the tournament period}
+      \item[b] \textit{Estimates are exponentiated coefficients from negative binomial regressions (based on tests of overdispersion) with year and day of week controls and no England match days during the tournament as benchmark; data is only available during the tournament period; 95\% confidence intervals are in square brackets}
     \end{tablenotes}
 \end{threeparttable} }
 \end{table*}
 
 
-To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years (Lancashire and West Midlands; see Table \ref{kirbyrep2}). To be consistent with previous results, we present the regressions for both types of domestic abuse (alcohol and non-alcohol related), however, unfortunately we cannot do the same for the Lancashire dataset, as we have no information on alcohol-involvement. Only year 2010 overlaps in the two datasets, which allows us to at least partly evaluate the robustness of the England win effect.
+
+To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years (Lancashire and West Midlands; see Table \ref{kirbyrep2}). To be consistent with previous results, we present the regressions for both types of domestic abuse (alcohol and non-alcohol related), however, unfortunately we cannot do the same for the Lancashire dataset, as it contains no information on alcohol-involvement. Only year 2010 overlaps in the two datasets, which allows us to (at least partly) evaluate the robustness of the England win effect.
 
 An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the strongest loss effect in our dataset. In addition, the size of the win and loss coefficients are remarkably similar, giving us confidence that these effects are likely to generalise to other areas within England. These patterns are also in line with findings from an earlier examination by \cite{Brimicombe2012}, who found an increase in the number of domestic abuse cases reported to the police across England on both victory and loss days during the 2010 World Cup.  Most importantly, if the same mechanism lies behind our results, then it suggests that the increase observed in other datasets are also likely to stem from alcohol-related cases. 
    
@@ -550,15 +552,16 @@ An interesting common pattern in both datasets is the large effect of England's 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) & (9) & (10) & (11) & (12) & (13)\\ 
 \hline \\[-1.8ex] 
 Tournament on &  &  &  & 1.047 & 1.038 & 0.881 & 0.936 & 0.976 & 0.999 & 1.041 & 0.855$^{*}$ & 1.081 & 1.014 \\ 
-  &  &  &  & (0.974, 1.127) & (0.936, 1.151) & (0.740, 1.049) & (0.780, 1.125) & (0.901, 1.057) & (0.890, 1.123) & (0.962, 1.128) & (0.757, 0.967) & (0.979, 1.194) & (0.889, 1.155) \\ 
+  &  &  &  & [0.974, 1.127] & [0.936, 1.151] & [0.740, 1.049] & [0.780, 1.125] & [0.901, 1.057] & [0.890, 1.123] & [0.962, 1.128] & [0.757, 0.967] & [0.979, 1.194] & [0.889, 1.155] \\ 
   England win & 1.596$^{**}$ & 1.297$^{***}$ & 1.916$^{***}$ & 1.171 & 1.845$^{***}$ & 0.673$^{*}$ & 1.106 &  &  & 1.062 & 1.302 & 1.006 & 1.529$^{***}$ \\ 
-  & (1.186, 2.153) & (1.115, 1.505) & (1.528, 2.389) & (0.897, 1.514) & (1.310, 2.595) & (0.456, 0.982) & (0.770, 1.576) &  &  & (0.796, 1.420) & (0.834, 1.995) & (0.844, 1.202) & (1.249, 1.869) \\ 
+  & [1.186, 2.153] & [1.115, 1.505] & [1.528, 2.389] & [0.897, 1.514] & [1.310, 2.595] & [0.456, 0.982] & [0.770, 1.576] &  &  & [0.796, 1.420] & [0.834, 1.995] & [0.844, 1.202] & [1.249, 1.869] \\ 
   England draw & 1.100 & 1.098 & 0.863 & 0.905 & 1.248 & 1.204 & 1.116 & 0.984 & 0.954 & 1.069 & 1.128 &  &  \\ 
-  & (0.820, 1.477) & (0.802, 1.481) & (0.713, 1.037) & (0.736, 1.107) & (0.966, 1.611) & (0.773, 1.877) & (0.676, 1.805) & (0.723, 1.343) & (0.576, 1.527) & (0.869, 1.318) & (0.835, 1.517) &  &  \\ 
+  & [0.820, 1.477] & [0.802, 1.481] & [0.713, 1.037] & [0.736, 1.107] & [0.966, 1.611] & [0.773, 1.877] & [0.676, 1.805] & [0.723, 1.343] & [0.576, 1.527] & [0.869, 1.318] & [0.835, 1.517] &  &  \\ 
   England lost & 1.200 & 1.373$^{**}$ & 1.568$^{***}$ & 1.082 & 1.435$^{*}$ & 0.812 & 0.961 & 0.934 & 1.079 & 0.772 & 0.620 & 1.101 & 1.252 \\ 
-  & (0.759, 1.894) & (1.086, 1.721) & (1.270, 1.928) & (0.838, 1.389) & (1.036, 1.992) & (0.508, 1.293) & (0.614, 1.491) & (0.747, 1.170) & (0.792, 1.459) & (0.568, 1.048) & (0.343, 1.058) & (0.904, 1.348) & (0.975, 1.603) \\ 
-  After England & 1.253$^{*}$ & 1.122 & 1.024 & 1.049 & 1.132 & 0.814 & 1.108 & 1.037 & 1.080 & 1.013 & 0.960 & 1.147 & 1.390$^{***}$ \\ 
-  & (1.029, 1.526) & (0.977, 1.286) & (0.900, 1.162) & (0.905, 1.194) & (0.933, 1.331) & (0.535, 1.092) & (0.834, 1.381) & (0.863, 1.249) & (0.832, 1.394) & (0.853, 1.172) & (0.715, 1.206) & (1.001, 1.317) & (1.173, 1.646) \\ 
+  & [0.759, 1.894] & [1.086, 1.721] & [1.270, 1.928] & [0.838, 1.389] & [1.036, 1.992] & [0.508, 1.293] & [0.614, 1.491] & [0.747, 1.170] & [0.792, 1.459] & [0.568, 1.048] & [0.343, 1.058] & [0.904, 1.348] & [0.975, 1.603] \\ 
+  After England & 1.253$^{*}$ & 1.122 & 1.024 & 1.049 & 1.132 & 0.814 & 1.108 & 1.037 & 1.080 & 1.013 & 0.960 & 1.147$^{*}$ & 1.390$^{***}$ \\ 
+  & [1.029, 1.526] & [0.977, 1.286] & [0.900, 1.162] & [0.907, 1.212] & [0.928, 1.380] & [0.617, 1.070] & [0.842, 1.453] & [0.863, 1.249] & [0.832, 1.394] & [0.864, 1.188] & [0.750, 1.224] & [1.001, 1.317] & [1.173, 1.646] \\
+
  \hline \\[-1.8ex] 
 Observations & 30 & 32 & 30 & 365 & 365 & 366 & 366 & 365 & 365 & 366 & 366 & 365 & 365 \\ 
 %Log Likelihood & $-$112.494 & $-$101.847 & $-$107.268 & $-$1,344.208 & $-$1,305.710 & $-$1,294.898 & $-$1,189.726 & $-$1,494.583 & $-$1,175.810 & $-$1,503.841 & $-$1,197.151 & $-$1,594.487 & $-$1,200.743 \\ 
@@ -570,7 +573,7 @@ Observations & 30 & 32 & 30 & 365 & 365 & 366 & 366 & 365 & 365 & 366 & 366 & 36
 \end{tabular} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001}
-      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions, except for Model (2) and (3) which are from Poisson regressions (based on tests of overdispersion). Each regression is restricted to a specific tournament year. Regressions 1-3 have day of week control with non England tournament days as benchmark, regressions 4-13 have month, day of week, Christmas, New Year's eve controls, with non-match days as benchmark.}
+      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions, except for Model (2) and (3) which are from Poisson regressions (based on tests of overdispersion). Each regression is restricted to a specific tournament year. Regressions 1-3 have day of week control with non England tournament days as benchmark, regressions 4-13 have month, day of week, Christmas, New Year's eve controls, with non-match days as benchmark; 95\% confidence intervals are in square brackets}
       \item[c] \textit{All = All cases, NA = Non-alcohol related cases, A = Alcohol-related cases}
     \end{tablenotes}
 \end{threeparttable} }
@@ -578,7 +581,6 @@ Observations & 30 & 32 & 30 & 365 & 365 & 366 & 366 & 365 & 365 & 366 & 366 & 36
 
 
 \newpage
-
 
 
 
@@ -598,16 +600,16 @@ Observations & 30 & 32 & 30 & 365 & 365 & 366 & 366 & 365 & 365 & 366 & 366 & 36
  \\[-1.8ex] & 2010 & 2010 & 2012 & 2012 & 2014 & 2014 & 2016 & 2016 & 2018 & 2018  \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) & (9) & (10)\\ 
 \hline \\[-1.8ex] 
- Tournament on & 1.035 & 0.959 & 1.063 & 1.084$^{*}$ & 0.976 & 1.085$^{*}$ & 0.960 & 1.105$^{**}$ & 0.948 & 1.069 \\ 
-  & (0.946, 1.133) & (0.901, 1.021) & (0.994, 1.136) & (1.014, 1.160) & (0.890, 1.073) & (1.010, 1.166) & (0.877, 1.052) & (1.029, 1.186) & (0.870, 1.034) & (0.997, 1.146) \\ 
-  England win & 0.957 & 1.385$^{***}$ & 1.143 & 1.674$^{***}$ & 0.979 & 1.528$^{***}$ & 0.935 & 1.558$^{***}$ & 0.698 & 1.583$^{**}$ \\ 
-  & (0.727, 1.289) & (1.154, 1.666) & (0.909, 1.457) & (1.344, 2.100) & (0.753, 1.299) & (1.254, 1.873) & (0.709, 1.262) & (1.262, 1.938) & (0.486, 1.040) & (1.192, 2.127) \\ 
-  England draw & 1.037 & 1.126 & 0.990 & 1.347$^{*}$ & 0.921 & 1.383$^{*}$ & 0.793 & 1.391$^{*}$ & 0.950 & 1.304$^{*}$ \\ 
-  & (0.724, 1.545) & (0.873, 1.456) & (0.769, 1.297) & (1.056, 1.734) & (0.662, 1.324) & (1.079, 1.788) & (0.550, 1.190) & (1.051, 1.862) & (0.708, 1.306) & (1.034, 1.656) \\ 
-  England lost & 1.102 & 1.090 & 1.140 & 1.218 & 1.096 & 1.213 & 1.128 & 1.263$^{*}$ & 0.902 & 1.134 \\ 
-  & (0.837, 1.482) & (0.901, 1.322) & (0.922, 1.428) & (0.986, 1.512) & (0.813, 1.520) & (0.964, 1.538) & (0.856, 1.521) & (1.021, 1.574) & (0.655, 1.280) & (0.880, 1.475) \\ 
-  After England & 1.095 & 1.198$^{**}$ & 1.169$^{*}$ & 1.287$^{***}$ & 1.054 & 1.283$^{***}$ & 1.043 & 1.316$^{***}$ & 0.891 & 1.205$^{*}$ \\ 
-  & (0.914, 1.276) & (1.077, 1.319) & (1.030, 1.307) & (1.151, 1.422) & (0.874, 1.234) & (1.147, 1.418) & (0.860, 1.225) & (1.177, 1.455) & (0.693, 1.088) & (1.050, 1.360) \\ 
+Tournament on & 1.010 & 0.970 & 1.040$^{*}$ & 0.990 & 1.025 & 0.972 & 1.023 & 1.010 & 1.014 & 0.980 \\ 
+  & [0.968, 1.055] & [0.915, 1.029] & [1.001, 1.081] & [0.937, 1.046] & [0.980, 1.071] & [0.917, 1.031] & [0.980, 1.069] & [0.954, 1.070] & [0.973, 1.057] & [0.926, 1.036] \\ 
+  England win & 0.913 & 1.387$^{***}$ & 1.015 & 1.557$^{***}$ & 0.955 & 1.470$^{***}$ & 0.927 & 1.490$^{***}$ & 0.931 & 1.438$^{**}$ \\ 
+  & [0.798, 1.047] & [1.175, 1.639] & [0.892, 1.157] & [1.312, 1.850] & [0.842, 1.084] & [1.260, 1.716] & [0.809, 1.064] & [1.265, 1.757] & [0.770, 1.126] & [1.149, 1.800] \\ 
+  England draw & 1.091 & 1.143 & 1.027 & 1.141 & 1.050 & 1.173 & 1.022 & 1.134 & 1.034 & 1.134 \\ 
+  & [0.915, 1.304] & [0.904, 1.443] & [0.888, 1.191] & [0.940, 1.386] & [0.895, 1.235] & [0.966, 1.426] & [0.851, 1.231] & [0.907, 1.418] & [0.896, 1.195] & [0.944, 1.362] \\ 
+  England lost & 1.012 & 1.093 & 1.047 & 1.153 & 1.036 & 1.129 & 1.067 & 1.200$^{*}$ & 0.977 & 1.049 \\ 
+  & [0.888, 1.155] & [0.918, 1.301] & [0.929, 1.182] & [0.974, 1.366] & [0.900, 1.194] & [0.941, 1.355] & [0.937, 1.217] & [1.015, 1.420] & [0.835, 1.145] & [0.859, 1.283] \\ 
+  After England & 1.046 & 1.203$^{**}$ & 1.094$^{*}$ & 1.185$^{**}$ & 1.051 & 1.189$^{**}$ & 1.059 & 1.225$^{***}$ & 1.012 & 1.093 \\ 
+  & [0.961, 1.138] & [1.077, 1.343] & [1.013, 1.182] & [1.064, 1.319] & [0.968, 1.142] & [1.069, 1.322] & [0.974, 1.154] & [1.098, 1.366] & [0.921, 1.113] & [0.968, 1.235] \\ 
  \hline \\[-1.8ex] 
 Observations & 3,205 & 3,205 & 3,204 & 3,204 & 3,205 & 3,205 & 3,204 & 3,204 & 3,205 & 3,205 \\ 
 %Log Likelihood & $-$15,738.220 & $-$11,006.630 & $-$15,087.610 & $-$11,568.310 & $-$15,673.620 & $-$11,605.220 & $-$15,608.290 & $-$11,602.150 & $-$15,499.280 & $-$11,605.610 \\ 
@@ -620,11 +622,32 @@ Observations & 3,205 & 3,205 & 3,204 & 3,204 & 3,205 & 3,205 & 3,204 & 3,204 & 3
 %\end{table} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.05; $^{**}$p$<$0.01; $^{***}$p$<$0.001}
-      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls}
+      \item[b] \textit{Estimates are exponentiated coefficients from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls; 95\% confidence intervals are in square brackets}
       \item[c] \textit{NA = Non-alcohol related cases, A = Alcohol-related cases}
     \end{tablenotes}
 \end{threeparttable}   }
 \end{sidewaystable}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
