--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -279,12 +279,12 @@ where \textbf{x\textsubscript{i}} is a vector of covariates, and $\boldsymbol{\b
 
 \section{Results}
 
-In the following count data analyses, we mainly present results from negative binomial models, as we found evidence for overdispersion in almost all cases (after testing for overdispersion using the method described in \citeNP{Cameron1990a}). All analyses were performed in R (version 3.6.2).
+In the following analyses, we mostly present results from negative binomial models, as we found evidence for overdispersion in almost all cases (after testing for overdispersion using the method described in \citeNP{Cameron1990a}). All analyses were performed in R (version 3.6.2).
 
 
 \subsection{Core results} 
 
-Table \ref{coremodel} shows the results from two negative binomial regressions investigating the link between football and domestic abuse, one for non-alcohol-related cases and one for alcohol-related cases. For non-alcohol-related cases, we find no evidence for an increase (or decrease) on days when the England football team plays, compared to non-match days. In contrast, we see a significant, 47\%, 95\% CI [26\%--71\%], increase in the number of alcohol-related cases on days when the England football team wins, compared to non-match days. We find no evidence for comparable increases in the number of reported domestic abuse cases when the England national team loses. Less surprising, and more consistent with previous findings is the lack of evidence for an increase on England draw days, probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. In addition, we estimate that there is an 18\%, 95\% CI [7\%--30\%], increase in the number of alcohol-related cases reported after an England match day, which could be the result of a temporal spill-over effect from the previous match day. 
+Table \ref{coremodel} shows the results from two negative binomial regressions investigating the link between football, alcohol and domestic abuse. The first column shows the results for the subset of non-alcohol-related cases, while the second column shows the estimates for alcohol-related cases. For non-alcohol-related cases, we find no evidence for an increase (or decrease) on days when the England football team plays, compared to non-match days. In contrast, we see a significant, 47\%, 95\% CI [26\%--71\%], increase in the number of alcohol-related cases on days when the England football team wins, compared to non-match days. We find no evidence for comparable increases in the number of reported domestic abuse cases when the England national team loses. Less surprising, and more consistent with previous findings is the lack of evidence for an increase on England draw days, probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. In addition, we estimate that there is an 18\%, 95\% CI [7\%--30\%], increase in the number of alcohol-related cases reported after an England match day, which could be the result of a temporal spill-over effect from the previous match day. 
 
 
 \begin{table*}[!htbp] \centering 
@@ -346,9 +346,9 @@ Notes:
 		\floatfoot{Note: Estimates are from two separate negative binomial regressions with year, month, day of week, three-hour period of day, Christmas, New Year's eve controls. Shaded area is 95\% CIs.}
 \end{figure}
 
- To further understand the characteristics of this increase, we exploited the detailed time information in our dataset, which allowed us to conduct a three-hour analysis to explore the finer temporal patterns of domestic abuse cases (alcohol-related or not) perpetrated before and after an England match. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. While a similar pattern can be observed on days when England lost, the increase in the number of alcohol-related cases is substantially smaller and not statistically different from zero.
+ To further understand the characteristics of this increase, we exploited the detailed time information in our dataset, which allowed us to conduct a three-hour analysis to explore the more granular temporal patterns of domestic abuse cases (alcohol-related or not) perpetrated before and after an England match. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. While a similar pattern can be observed on days when England lost, the increase in the number of alcohol-related cases is substantially smaller and not statistically different from zero.
  
- We also examined how these patterns vary by the gender of the victim and the offender. Table \ref{gender} in the Appendix shows the results by alcohol-involvement and victim-offender gender group (male to female, female to male, male to male, female to female), on a sample of domestic abuse cases with one victim and offender, where gender information is available (about 86\% of domestic abuse cases). In line with our previous results, we find a 41\%, 95\% CI [18\%--69\%], increase in the group of alcohol-related male to female cases on England win days, and a 17\%, 95\% CI [5\%--31\%] increase on days following and England match. We find no evidence for comparable increases in other gender groups, however, it should be noted that substantial differences in the number of cases by gender group (e.g., 78\% of cases are male to female, 10\% of cases are female to male, 7\% are male to male, and 5\% are female to female) hinders a precise estimation of the effect of football on alcohol and non-alcohol related domestic abuse. 
+ We also examined how these patterns vary by the gender of the victim and the offender. Table \ref{gender} in the Appendix shows the results by alcohol-involvement and victim-offender gender group (male to female, female to male, male to male, female to female), on a sample of domestic abuse cases with one victim and offender, where gender information is available (about 86\% of all domestic abuse cases in our dataset). In line with our previous results, we find a 41\%, 95\% CI [18\%--69\%], increase in the group of alcohol-related male to female cases on England win days, and a 17\%, 95\% CI [5\%--31\%] increase on days following and England match. We find no evidence for comparable increases in other gender groups, however, it should be noted that substantial differences in the number of cases by gender group (e.g., 78\% of cases are male to female, 10\% of cases are female to male, 7\% are male to male, and 5\% are female to female) hinders a precise estimation of the effect of football on alcohol and non-alcohol-related domestic abuse. 
 
 
 
@@ -635,25 +635,9 @@ Observations & 3,205 & 3,205 & 3,204 & 3,204 & 3,205 & 3,205 & 3,204 & 3,204 & 3
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 \begin{sidewaystable}[htp]
 \centering
- \caption{Characteristics of domestic abuse cases perpetrated on England football days I -- non-repeat cases, public perpetrated cases, serious injury}
+ \caption{Characteristics of domestic abuse cases perpetrated on England football days I -- non-repeat cases, publicly perpetrated cases, serious injury}
   \label{logistic}
  \scalebox{0.8}{
   \begin{threeparttable}
@@ -725,24 +709,24 @@ Observations & 260,466 & 282,400 & 282,400 & 76,309 & 89,153 & 89,153 \\
  & since last & until next & until reported  & since last & until next & until reported \\
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
 \hline \\[-1.8ex] 
- Tournament on & $-$0.006 & $-$0.005 & 0.055 & $-$0.010 & $-$0.009 & 0.217 \\ 
-  & (0.942, 1.049) & (0.946, 1.046) & (0.936, 1.194) & (0.905, 1.082) & (0.910, 1.079) & (0.854, 1.807) \\ 
+ Tournament on & 0.992 & 0.993 & 1.069 & 0.996 & 0.990 & 1.019 \\ 
+  & [0.941, 1.046] & [0.945, 1.045] & [0.951, 1.201] & [0.911, 1.089] & [0.910, 1.078] & [0.759, 1.369] \\ 
   & & & & & & \\ 
- England win & 0.132 & $-$0.129 & $-$0.420$^{*}$ & $-$0.046 & 0.142 & $-$0.255 \\ 
-  & (0.979, 1.331) & (0.742, 1.042) & (0.466, 0.926) & (0.730, 1.250) & (0.943, 1.409) & (0.323, 1.855) \\ 
+ England win & 1.133 & 0.878 & 0.837 & 0.910 & 1.160 & 0.953 \\ 
+  & [0.973, 1.320] & [0.741, 1.041] & [0.597, 1.173] & [0.701, 1.182] & [0.949, 1.418] & [0.396, 2.295] \\ 
   & & & & & & \\ 
- England draw & 0.056 & $-$0.110 & $-$0.403 & $-$0.047 & 0.108 & $-$0.317 \\ 
-  & (0.847, 1.321) & (0.724, 1.108) & (0.441, 1.013) & (0.699, 1.301) & (0.859, 1.443) & (0.312, 1.702) \\ 
+ England draw & 1.066 & 0.899 & 0.842 & 0.956 & 1.130 & 0.767 \\ 
+  & [0.853, 1.332] & [0.727, 1.112] & [0.556, 1.275] & [0.701, 1.304] & [0.871, 1.465] & [0.332, 1.769] \\ 
   & & & & & & \\ 
- England lost & $-$0.012 & 0.069 & $-$0.390$^{*}$ & 0.114 & $-$0.054 & $-$0.001 \\ 
-  & (0.838, 1.165) & (0.918, 1.250) & (0.466, 0.985) & (0.857, 1.467) & (0.747, 1.201) & (0.290, 3.449) \\ 
+ England lost & 1.015 & 1.054 & 0.622$^{**}$ & 1.082 & 0.962 & 1.073 \\ 
+  & [0.862, 1.196] & [0.904, 1.229] & [0.441, 0.878] & [0.829, 1.412] & [0.758, 1.220] & [0.330, 3.493] \\ 
   & & & & & & \\ 
- After England & 0.105$^{*}$ & 0.050 & $-$0.276$^{*}$ & $-$0.017 & 0.040 & $-$0.660$^{**}$ \\ 
-  & (1.006, 1.227) & (0.959, 1.154) & (0.588, 0.978) & (0.833, 1.160) & (0.892, 1.215) & (0.315, 0.849) \\ 
-  & & & & & & \\ 
-  & & & & & & \\ 
+ After England & 1.118$^{*}$ & 1.035 & 0.749$^{**}$ & 0.968 & 1.030 & 0.599$^{*}$ \\ 
+  & [1.012, 1.234] & [0.944, 1.135] & [0.604, 0.930] & [0.823, 1.140] & [0.883, 1.201] & [0.365, 0.982] \\ 
+
+ & & & & & & \\ 
 \hline \\[-1.8ex] 
-Observations & 96,246 & 93,840 & 274,122 & 30,749 & 33,155 &  88,407 \\ 
+Observations & 96,474 & 94,085 & 273,796 & 30,774 & 33,163 & 88,461 \\ 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{6}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
 \end{tabular} 
@@ -770,22 +754,24 @@ Observations & 96,246 & 93,840 & 274,122 & 30,749 & 33,155 &  88,407 \\
 & not alcohol-related & alcohol-related\\ 
 \\[-1.8ex] & (1) & (2)\\ 
 \hline \\[-1.8ex] 
- Tournament on & 0.907 & 0.846$^{*}$ \\ 
-  & (0.807, 1.020) & (0.733, 0.977) \\ 
+ Tournament on & 0.910 & 0.854$^{*}$ \\ 
+  & [0.802, 1.032] & [0.741, 0.984] \\ 
   & & \\ 
- England win & 1.311 & 1.168 \\ 
-  & (0.938, 1.832) & (0.763, 1.788) \\ 
+ England win & 1.338 & 1.169 \\ 
+  & [0.966, 1.855] & [0.764, 1.790] \\ 
   & & \\ 
- England draw & 1.554$^{*}$ & 1.339 \\ 
-  & (1.046, 2.309) & (0.705, 2.544) \\ 
+ England draw & 1.560$^{*}$ & 1.338 \\ 
+  & [1.037, 2.348] & [0.738, 2.425] \\ 
   & & \\ 
- England lost & 1.116 & 1.225 \\ 
-  & (0.791, 1.573) & (0.774, 1.939) \\ 
+ England lost & 1.115 & 1.227 \\ 
+  & [0.791, 1.572] & [0.775, 1.942] \\ 
   & & \\ 
- After England & 1.070 & 1.119 \\ 
-  & (0.870, 1.317) & (0.835, 1.498) \\ 
+ After England & 1.082 & 1.109 \\ 
+  & [0.871, 1.344] & [0.834, 1.475] \\ 
+  & & \\ 
 \hline \\[-1.8ex] 
-Observations & 95,813 & 34,156 \\ 
+Observations & 96,264 & 34,249 \\ 
+
 %R$^{2}$ & 0.063 & 0.010 \\ 
 %$\chi^{2}$ (df = 33) & 3,515.259$^{***}$ & 244.635$^{***}$ \\ 
 \hline 
